<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_controller</name>
  <version>0.0.1</version>
  <description>Dummy Carla Autonomous Vehicle Controller To Test Path Planning Algorithms</description>
  <maintainer email="aliaydin.kucukcollu@bmc.com.tr">Ali Aydin Kucukcollu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
